2012-02-17  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: terminated workers are not removed from dedicated worker list
        https://bugs.webkit.org/show_bug.cgi?id=78899

        Notify inspector about starting context from WorkerContextProxy not from Worker.

        Reviewed by Pavel Feldman.

        * workers/Worker.cpp:
        (WebCore::Worker::notifyFinished):
        * workers/WorkerMessagingProxy.cpp:
        (WebCore::WorkerMessagingProxy::startWorkerContext):

2012-02-19  Keishi Hattori  <keishi@webkit.org>

        Use shadowRootList for ColorInputType
        https://bugs.webkit.org/show_bug.cgi?id=79007

        Reviewed by Kent Tamura.

        * html/ColorInputType.cpp:
        (WebCore::ColorInputType::createShadowSubtree): Changed shadowRoot to shadowRootList.
        (WebCore::ColorInputType::shadowColorSwatch): Changed shadowRoot to shadowRootList.

2012-02-19  Shinya Kawanaka  <shinyak@chromium.org>

        Introduce InsertionPoint, which will be a common base class of HTMLShadowElement and HTMLContentElement.
        https://bugs.webkit.org/show_bug.cgi?id=78771

        Reviewed by Hajime Morita.

        This patch introduces InsertionPoint, which will be a common base class of HTMLShadowElement and HTMLContentElement.

        This is a step for rendering <shadow> correctly, because <shadow> has almost the same function of <content>.
        After this patch, we will change NodeRenderingContext and related classes to accept InsertionPoint instead of
        HTMLContentElement only.

        No new tests, no change in behavior.

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * html/shadow/HTMLContentElement.cpp:
        (WebCore::HTMLContentElement::HTMLContentElement):
        (WebCore::HTMLContentElement::attach):
        (WebCore::HTMLContentElement::detach):